[package]
name = "acmed"
version = "0.25.0-dev"
authors = ["Rodolphe Bréard <rodolphe@what.tf>"]
edition = "2021"
description = "ACME (RFC 8555) client daemon"
readme = "README.md"
repository = "https://github.com/breard-r/acmed"
license = "MIT OR Apache-2.0"
keywords = ["acme", "tls", "X.509"]
categories = ["cryptography"]
include = ["src/**/*", "Cargo.toml", "LICENSE-*.txt"]
publish = false
rust-version = "1.74.0"

[features]
default = ["openssl_dyn"]
crypto_openssl = []
openssl_dyn = ["crypto_openssl"]
openssl_vendored = ["crypto_openssl"]
ed25519 = []
ed448 = []

[dependencies]
anyhow = { version = "1.0.94", default-features = false, features = ["std"] }
clap = { version = "4.5.23", default-features = false, features = ["color", "derive", "help", "std", "string"] }
config = { version = "0.14.0", default-features = false, features = ["toml"] }
daemonize = { version = "0.5.0", default-features = false }
serde = { version = "1.0.216", default-features = false, features = ["std"] }
serde_derive = { version = "1.0.216", default-features = false }
syslog-tracing = { version = "0.3.1", default-features = false }
tokio = { version = "1.42.0", default-features = false, features = ["rt", "rt-multi-thread", "time"] }
tracing = { version = "0.1.41", default-features = false, features = ["std"] }
tracing-subscriber = { version = "0.3.19", default-features = false, features = ["ansi", "fmt", "std"] }
walkdir = { version = "2.5.0", default-features = false }

[target.'cfg(unix)'.dependencies]

[build-dependencies]

[profile.release]
opt-level = "z"
debug = false
lto = true
codegen-units = 1
panic = "abort"
strip = true
incremental = false
