[package]
name = "acme_common"
version = "0.13.0"
authors = ["Rodolphe Breard <rodolphe@what.tf>"]
edition = "2018"
readme = "../README.md"
repository = "https://github.com/breard-r/libreauth"
license = "MIT OR Apache-2.0"
include = ["src/**/*", "Cargo.toml", "Licence_*.txt"]
publish = false

[lib]
name = "acme_common"

[features]
default = []
crypto_openssl = []
openssl_dyn = ["crypto_openssl", "openssl", "openssl-sys"]
openssl_vendored = ["crypto_openssl", "openssl/vendored", "openssl-sys/vendored"]

[dependencies]
attohttpc = { version = "0.16", default-features = false }
base64 = "0.13"
daemonize = "0.4"
env_logger = "0.7"
glob = "0.3"
handlebars = "3.0"
libc = "0.2"
log = "0.4"
native-tls = "0.2"
openssl = { version = "0.10", optional = true }
openssl-sys = { version = "0.9", optional = true }
punycode = "0.4"
serde_json = "1.0"
syslog = "5.0"
toml = "0.5"

[target.'cfg(unix)'.dependencies]
nix = "0.18"
