[package]
name = "acme_common"
version = "0.21.0"
authors = ["Rodolphe Breard <rodolphe@what.tf>"]
edition = "2018"
readme = "../README.md"
repository = "https://github.com/breard-r/libreauth"
license = "MIT OR Apache-2.0"
include = ["src/**/*", "Cargo.toml", "Licence_*.txt"]
publish = false

[lib]
name = "acme_common"

[features]
default = []
crypto_openssl = []
openssl_dyn = ["crypto_openssl", "openssl", "openssl-sys"]
openssl_vendored = ["crypto_openssl", "openssl/vendored", "openssl-sys/vendored"]

[dependencies]
base64 = "0.21"
daemonize = "0.5"
env_logger = "0.10"
glob = "0.3"
log = "0.4"
minijinja = "1.0.3"
native-tls = "0.2"
openssl = { version = "0.10", optional = true }
openssl-sys = { version = "0.9", optional = true }
punycode = "0.4"
reqwest = { version = "0.11.16", default-features = false }
serde_json = "1.0"
syslog = "6.0"
toml = "0.7"

[target.'cfg(unix)'.dependencies]
nix = "0.26"
