[package]
name = "acme_common"
version = "0.25.0"
authors = ["Rodolphe Breard <rodolphe@what.tf>"]
edition = "2018"
readme = "../README.md"
repository = "https://codeberg.org/rbd/acmed"
license = "MIT OR Apache-2.0"
include = ["src/**/*", "Cargo.toml", "Licence_*.txt"]
publish = false
rust-version = "1.74.0"

[lib]
name = "acme_common"

[features]
default = []
crypto_openssl = []
openssl_dyn = ["crypto_openssl", "openssl", "openssl-sys"]
openssl_vendored = ["crypto_openssl", "openssl/vendored", "openssl-sys/vendored"]
ed25519 = []
ed448 = []

[dependencies]
base64 = "0.22.0"
daemonize = "0.5.0"
env_logger = "0.11.3"
glob = "0.3.1"
log = "0.4.21"
minijinja = "2.5.0"
native-tls = "0.2.11"
openssl = { version = "0.10.64", optional = true }
openssl-sys = { version = "0.9.101", optional = true }
punycode = "0.4.1"
reqwest = { version = "0.12.1", default-features = false }
serde_json = "1.0.114"
syslog = "7.0.0"
toml = "0.8.12"

[target.'cfg(unix)'.dependencies]
nix = "0.29.0"
