[package]
name = "acmed"
version = "0.21.0"
authors = ["Rodolphe Breard <rodolphe@what.tf>"]
edition = "2018"
description = "ACME (RFC 8555) client daemon"
readme = "../README.md"
repository = "https://github.com/breard-r/acmed"
license = "MIT OR Apache-2.0"
keywords = ["acme", "tls", "X.509"]
categories = ["cryptography"]
build = "build.rs"
include = ["src/**/*", "Cargo.toml", "LICENSE-*.txt"]
publish = false
rust-version = "1.65.0"

[features]
default = ["openssl_dyn"]
crypto_openssl = []
openssl_dyn = ["crypto_openssl", "acme_common/openssl_dyn"]
openssl_vendored = ["crypto_openssl", "acme_common/openssl_vendored"]

[dependencies]
acme_common = { path = "../acme_common" }
async-lock = "3.0"
async-process = "2.0"
bincode = "1.3"
clap = { version = "4.0", features = ["string"] }
futures = "0.3"
glob = "0.3"
log = "0.4"
nom = { version = "7.0", default-features = false, features = [] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
tokio = { version = "1", features = ["full"] }
rand = "0.8.5"
reqwest = "0.11.16"
minijinja = "1.0.3"

[target.'cfg(unix)'.dependencies]
nix = { version = "0.27", features = ["fs", "user"] }

[build-dependencies]
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
