[package]
name = "acmed"
version = "0.25.0"
authors = ["Rodolphe Breard <rodolphe@what.tf>"]
edition = "2018"
description = "ACME (RFC 8555) client daemon"
readme = "../README.md"
repository = "https://codeberg.org/rbd/acmed"
license = "MIT OR Apache-2.0"
keywords = ["acme", "tls", "X.509"]
categories = ["cryptography"]
build = "build.rs"
include = ["src/**/*", "Cargo.toml", "LICENSE-*.txt"]
publish = false
rust-version = "1.74.0"

[features]
default = ["openssl_dyn"]
crypto_openssl = []
openssl_dyn = ["crypto_openssl", "acme_common/openssl_dyn"]
openssl_vendored = ["crypto_openssl", "acme_common/openssl_vendored"]

[dependencies]
acme_common = { path = "../acme_common" }
async-lock = "3.3.0"
async-process = "2.1.0"
bincode = { version = "2.0.1", features = ["serde"] }
clap = { version = "4.5.3", features = ["string"] }
futures = "0.3.30"
glob = "0.3.1"
log = "0.4.21"
nom = { version = "8.0.0", default-features = false, features = [] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
toml = "0.9.5"
tokio = { version = "1.36.0", features = ["full"] }
rand = "0.9.2"
reqwest = "0.12.1"
minijinja = "2.5.0"

[target.'cfg(unix)'.dependencies]
nix = { version = "0.30.1", features = ["fs", "user"] }

[build-dependencies]
serde = { version = "1.0.197", features = ["derive"] }
toml = "0.9.5"
