[package]
name = "tacd"
version = "0.23.0"
authors = ["Rodolphe Breard <rodolphe@what.tf>"]
edition = "2018"
description = "TLS-ALPN Challenge Daemon"
readme = "../README.md"
repository = "https://github.com/breard-r/acmed"
license = "MIT OR Apache-2.0"
keywords = ["acme", "tls", "alpn", "X.509"]
categories = ["cryptography"]
include = ["src/**/*", "Cargo.toml", "LICENSE-*.txt"]
publish = false
rust-version = "1.74.0"

[features]
default = ["openssl_dyn"]
crypto_openssl = []
openssl_dyn = ["crypto_openssl", "acme_common/openssl_dyn"]
openssl_vendored = ["crypto_openssl", "acme_common/openssl_vendored"]

[dependencies]
acme_common = { path = "../acme_common" }
anyhow = "1.0"
clap = { version = "4.5", features = ["string"] }
log = "0.4"
openssl = "0.10"
thiserror = "1.0"
